# CoLiNN

./: LICENSE  README.md  environment.yml  pyproject.toml
CoLiNN/: main.py  modules.py  preprocessing.py
