[tool.poetry]
name = "CoLiNN"
version = "0.1.0"
description = "Official implementation of CoLiNN architecture"
authors = ["Regina Pikalyova <reginapikalyova@gmail.com>, Tagir Akhmetshin <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "CoLiNN", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
epam-indigo = "=1.12.0"
mendeleev = ">=0.10"
omegaconf = ">=2.2"
tqdm = ">=4.64"
ipykernel = ">=6.15"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
